# pix2pix

./: .gitignore  README.md  pyproject.toml
scripts/: download_dataset.py  train.py
src/pix2pix/: __init__.py  config.py
src/pix2pix/data/: __init__.py  download.py  maps.py
src/pix2pix/models/: __init__.py  pix2pix.py
src/pix2pix/training/: __init__.py  checkpoints.py  engine.py  evaluation.py  losses.py  schedulers.py  tracking.py
src/pix2pix/utils/: __init__.py  images.py  logging.py  runtime.py  system_metrics.py
tests/: conftest.py  test_core.py
